--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
         "@types/jest": "^29.5.14",
+        "@types/object-path": "^0.11.4",
         "@types/react": "^19.0.10",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
