--- a/story/package.json
+++ b/story/package.json
@@ -22,6 +22,7 @@
         "@storybook/testing-library": "^0.2.2",
         "@tailwindcss/typography": "^0.5.16",
         "@tailwindcss/vite": "^4.0.13",
+        "@vitejs/plugin-react-swc": "^3.8.0",
         "@types/react": "^19.0.10",
         "@types/react-syntax-highlighter": "^15.5.13",
         "remark-gfm": "^4.0.1",
@@ -38,7 +39,8 @@
         "ts-node": "^10.9.2",
         "typescript": "^5.8.2",
         "vite": "^5.1.4",
-        "zod": "^3.24.2"
+        "zod": "^3.24.2",
+        "schema-form": "file:../"
     },
     "license": "MIT"
 }
