--- a/package.json
+++ b/package.json
@@ -2,34 +2,62 @@
     "name": "schema-form",
     "version": "0.1.0",
     "description": "A flexible and powerful React library for building dynamic forms using JSON schemas",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "license": "MIT",
+    "source": "src/index.ts",
+    "exports": {
+        "./package.json": "./package.json",
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.esm.mjs",
+            "require": "./dist/index.cjs.js"
+        }
+    },
     "scripts": {
-        "build": "tsc",
+        "prebuild": "bun clean",
+        "build": "bun build:modern",
+        "postbuild": "rimraf dist/**/*/__tests__ && node ./scripts/rollup/assert-esm-exports.mjs && node ./scripts/rollup/assert-cjs-exports.cjs",
+        "build:esm": "rollup --bundleConfigAsCjs -c ./scripts/rollup/rollup.esm.config.js",
+        "build:modern": "rollup --bundleConfigAsCjs -c ./scripts/rollup/rollup.config.js",
+        "build:watch": "bun build:modern -w",
+        "clean": "rimraf dist",
+        "lint": "eslint '**/*.{js,ts,tsx}'",
+        "lint:fix": "bun lint --fix",
         "test": "jest",
+        "test:coverage": "jest --coverage",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "type": "tsc --noEmit"
     },
     "dependencies": {
         "deepmerge": "^4.3.1",
         "object-path": "^0.11.8",
         "react-hook-form": "^7.54.2"
     },
-    "peerDependencies": {
-        "react": "^16.8.0 || ^17 || ^18 || ^19"
-    },
     "devDependencies": {
+        "@eslint/js": "^9.20.0",
+        "@rollup/plugin-commonjs": "^26.0.3",
+        "@rollup/plugin-node-resolve": "^15.3.1",
+        "@rollup/plugin-terser": "^0.4.4",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
         "@types/jest": "^29.5.14",
         "@types/object-path": "^0.11.4",
         "@types/react": "^19.0.10",
+        "@typescript-eslint/parser": "^8.24.1",
+        "eslint": "^9.20.1",
+        "eslint-plugin-only-warn": "^1.1.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "rollup": "^4.34.8",
+        "rollup-plugin-typescript2": "^0.36.0",
         "ts-jest": "^29.2.6",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.2",
+        "typescript-eslint": "^8.24.1",
         "zod": "^3.24.2"
     },
-    "license": "MIT"
+    "peerDependencies": {
+        "react": "^16.8.0 || ^17 || ^18 || ^19"
+    }
 }
