--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,26 @@
 {
     "compilerOptions": {
-        "target": "ES2022",
-        "useDefineForClassFields": true,
-        "lib": [
-            "ES2020"
-        ],
-        "module": "ES2022",
-        "skipLibCheck": true,
-        /* Bundler mode */
-        "moduleResolution": "Bundler",
-        "allowImportingTsExtensions": true,
-        "isolatedModules": false,
-        "moduleDetection": "force",
-        "noEmit": true,
+        "sourceMap": true,
+        "module": "es2015",
+        "target": "es2018",
+        "moduleResolution": "node",
+        "outDir": "./dist",
         "jsx": "react-jsx",
-        /* Linting */
-        "strict": false,
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
-        "noFallthroughCasesInSwitch": true,
-        "noUncheckedSideEffectImports": true,
-        /* Recommended */
-        "forceConsistentCasingInFileNames": true,
-        /* Experimental */
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
+        "skipLibCheck": true,
+        "declaration": true,
+        "declarationMap": true,
+        "noEmit": true,
         "esModuleInterop": true,
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
+        "strict": false,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+        "forceConsistentCasingInFileNames": true,
         "types": [
             "node",
             "jest",
