--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "0.1.0",
     "description": "A flexible and powerful React library for building dynamic forms using JSON schemas",
     "license": "MIT",
-    "source": "src/index.ts",
     "exports": {
         "./package.json": "./package.json",
         ".": {
@@ -12,6 +11,7 @@
             "require": "./dist/index.cjs.js"
         }
     },
+    "source": "src/index.ts",
     "scripts": {
         "prebuild": "bun clean",
         "build": "bun build:modern",
@@ -49,6 +49,7 @@
         "eslint-plugin-react-refresh": "^0.4.19",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "rimraf": "^3.0.2",
         "rollup": "^4.34.8",
         "rollup-plugin-typescript2": "^0.36.0",
         "ts-jest": "^29.2.6",
