--- a/package.json
+++ b/package.json
@@ -13,25 +13,30 @@
     },
     "source": "src/index.ts",
     "scripts": {
-        "prebuild": "bun clean",
-        "build": "bun build:modern",
+        "api-extractor": "api-extractor run --local",
+        "api-extractor:build": "bun run build:esm && bun run api-extractor",
+        "api-extractor:ci": "node scripts/apiExtractor.js",
+        "prebuild": "bun run clean",
+        "build": "bun run build:modern",
         "postbuild": "rimraf dist/**/*/__tests__ && node ./scripts/rollup/assert-esm-exports.mjs && node ./scripts/rollup/assert-cjs-exports.cjs",
         "build:esm": "rollup --bundleConfigAsCjs -c ./scripts/rollup/rollup.esm.config.js",
         "build:modern": "rollup --bundleConfigAsCjs -c ./scripts/rollup/rollup.config.js",
-        "build:watch": "bun build:modern -w",
+        "build:watch": "bun run build:modern -w",
         "clean": "rimraf dist",
         "lint": "eslint '**/*.{js,ts,tsx}'",
-        "lint:fix": "bun lint --fix",
-        "test": "jest",
-        "test:coverage": "jest --coverage",
-        "test:watch": "jest --watch",
+        "lint:fix": "bun run lint --fix",
+        "test": "jest --config ./scripts/jest/jest.config.ts",
+        "test:coverage": "bun run test --coverage",
+        "test:watch": "bun run test--onlyChanged --watch",
         "type": "tsc --noEmit"
     },
     "dependencies": {
+        "react": "^18.3.1",
         "react-hook-form": "^7.54.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.20.0",
+        "@microsoft/api-extractor": "^7.51.0",
         "@rollup/plugin-commonjs": "^26.0.3",
         "@rollup/plugin-node-resolve": "^15.3.1",
         "@rollup/plugin-terser": "^0.4.4",
@@ -41,6 +46,7 @@
         "@types/object-path": "^0.11.4",
         "@types/react": "^19.0.10",
         "@typescript-eslint/parser": "^8.24.1",
+        "ajv": "^8",
         "eslint": "^9.20.1",
         "eslint-plugin-only-warn": "^1.1.0",
         "eslint-plugin-react-hooks": "^5.1.0",
@@ -53,10 +59,10 @@
         "ts-jest": "^29.2.6",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.2",
-        "typescript-eslint": "^8.24.1",
-        "zod": "^3.24.2"
+        "typescript-eslint": "^8.24.1"
     },
     "peerDependencies": {
-        "react": "^16.8.0 || ^17 || ^18 || ^19"
+        "react": "^17 || ^18 || ^19",
+        "react-hook-form": "^7"
     }
 }
