Update package name to @basestacks/schema-form; adjust imports and installation instructions accordingly

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "schema-form",
+    "name": "@basestacks/schema-form",
     "version": "0.1.0",
     "description": "A small React library for building dynamic forms using JSON schemas",
     "license": "MIT",
@@ -25,20 +25,20 @@
     ],
     "scripts": {
         "api-extractor": "api-extractor run --local",
-        "api-extractor:build": "bun run build:esm && bun run api-extractor",
+        "api-extractor:build": "pnpm build:esm && bun run api-extractor",
         "api-extractor:ci": "node scripts/apiExtractor.js",
-        "prebuild": "bun run clean",
-        "build": "bun run build:modern",
+        "prebuild": "pnpm clean",
+        "build": "pnpm build:modern",
         "postbuild": "rimraf dist/**/*/__tests__ && node ./scripts/rollup/assert-esm-exports.mjs && node ./scripts/rollup/assert-cjs-exports.cjs",
         "build:esm": "rollup --bundleConfigAsCjs -c ./scripts/rollup/rollup.esm.config.js",
         "build:modern": "rollup --bundleConfigAsCjs -c ./scripts/rollup/rollup.config.js",
-        "build:watch": "bun run build:modern -w",
+        "build:watch": "pnpm build:modern -w",
         "clean": "rimraf dist",
-        "lint": "eslint '**/*.{js,ts,tsx}'",
-        "lint:fix": "bun run lint --fix",
+        "lint": "eslint **/*.{js,ts,tsx}",
+        "lint:fix": "pnpm lint --fix",
         "test": "jest --config ./scripts/jest/jest.config.ts",
-        "test:coverage": "bun run test --coverage",
-        "test:watch": "bun run test--onlyChanged --watch",
+        "test:coverage": "pnpm test --coverage",
+        "test:watch": "pnpm test--onlyChanged --watch",
         "type": "tsc --noEmit"
     },
     "dependencies": {
@@ -57,7 +57,6 @@
         "@types/object-path": "^0.11.4",
         "@types/react": "^19.0.10",
         "@typescript-eslint/parser": "^8.24.1",
-        "ajv": "^8",
         "eslint": "^9.20.1",
         "eslint-plugin-only-warn": "^1.1.0",
         "eslint-plugin-react-hooks": "^5.1.0",
