--- a/story/package.json
+++ b/story/package.json
@@ -1,46 +1,43 @@
 {
-    "name": "schema-form-storybook",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "sb": "storybook dev -p 6006",
-        "sb:build": "storybook build"
-    },
-    "dependencies": {
-        "@hookform/resolvers": "^4.1.3",
-        "@radix-ui/react-checkbox": "^1.1.4",
-        "@radix-ui/react-label": "^2.1.2",
-        "@radix-ui/react-select": "^2.1.6",
-        "@radix-ui/react-slot": "^1.1.2",
-        "@storybook/addon-essentials": "^8.1.1",
-        "@storybook/addon-interactions": "^8.1.1",
-        "@storybook/addon-links": "^8.1.1",
-        "@storybook/blocks": "^8.1.1",
-        "@storybook/builder-vite": "^8.1.1",
-        "@storybook/react": "^8.1.1",
-        "@storybook/react-vite": "^8.1.1",
-        "@storybook/testing-library": "^0.2.2",
-        "@tailwindcss/typography": "^0.5.16",
-        "@tailwindcss/vite": "^4.0.13",
-        "@vitejs/plugin-react-swc": "^3.8.0",
-        "@types/react": "^19.0.10",
-        "@types/react-syntax-highlighter": "^15.5.13",
-        "remark-gfm": "^4.0.1",
-        "storybook-dark-mode": "^4.0.2",
-        "date-fns": "^4.1.0",
-        "i18next": "^24.2.3",
-        "react-day-picker": "8.10.1",
-        "react-i18next": "^15.4.1",
-        "react-markdown": "^10.1.0",
-        "react-syntax-highlighter": "^15.6.1",
-        "storybook": "^8.1.1",
-        "tailwind-merge": "^3.0.2",
-        "tailwindcss": "^4.0.13",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.8.2",
-        "vite": "^5.1.4",
-        "zod": "^3.24.2",
-        "schema-form": "file:../"
-    },
-    "license": "MIT"
+  "name": "@basestacks/schema-form-storybook",
+  "version": "0.1.0",
+  "private": true,
+  "license": "MIT",
+  "scripts": {
+    "sb": "storybook dev -p 6006",
+    "sb:build": "storybook build"
+  },
+  "dependencies": {
+    "@basestacks/schema-form": "file:..",
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@storybook/addon-essentials": "^8.6.7",
+    "@storybook/addon-interactions": "^8.6.7",
+    "@storybook/addon-links": "^8.6.7",
+    "@storybook/blocks": "^8.6.7",
+    "@storybook/react": "^8.6.7",
+    "@storybook/react-vite": "^8.6.7",
+    "@tailwindcss/typography": "^0.5.16",
+    "i18next": "^24.2.3",
+    "react-i18next": "^15.4.1",
+    "storybook": "^8.6.7",
+    "storybook-dark-mode": "^4.0.2",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "3",
+    "@storybook/test": "8.6.7",
+    "@storybook/theming": "^8.6.7",
+    "@tailwindcss/vite": "^4.0.13",
+    "@types/react": "^19.0.10",
+    "@vitejs/plugin-react-swc": "^3.8.0",
+    "tailwindcss": "^4.0.13",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
+    "vite": "^5.1.4"
+  }
 }
