--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "jsnext:main": "dist/index.esm.mjs",
     "types": "dist/index.d.ts",
     "files": [
-        "dist"
+        "dist",
+        "src",
+        "!**/*.test.ts",
+        "!**/*.test.tsx"
     ],
     "scripts": {
         "api-extractor": "api-extractor run --local",
@@ -47,6 +50,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.20.0",
+        "@types/node": "^22.13.10",
         "@microsoft/api-extractor": "^7.51.0",
         "@rollup/plugin-commonjs": "^26.0.3",
         "@rollup/plugin-node-resolve": "^15.3.1",
