--- a/story/package.json
+++ b/story/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "sb": "storybook dev -p 6006",
-    "sb:build": "storybook build"
+    "build-storybook": "storybook build",
+    "start": "storybook dev -p 6006"
   },
   "dependencies": {
     "@basestacks/schema-form": "file:..",
@@ -21,7 +21,11 @@
     "@storybook/react": "^8.6.7",
     "@storybook/react-vite": "^8.6.7",
     "@tailwindcss/typography": "^0.5.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "i18next": "^24.2.3",
+    "lucide-react": "^0.483.0",
     "react-i18next": "^15.4.1",
     "storybook": "^8.6.7",
     "storybook-dark-mode": "^4.0.2",
@@ -35,6 +39,7 @@
     "@tailwindcss/vite": "^4.0.13",
     "@types/react": "^19.0.10",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "chromatic": "^11.27.0",
     "tailwindcss": "^4.0.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
