--- a/story/package.json
+++ b/story/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@storybook/addon-essentials": "^8.6.7",
@@ -26,6 +27,7 @@
     "date-fns": "^4.1.0",
     "i18next": "^24.2.3",
     "lucide-react": "^0.483.0",
+    "react-day-picker": "^9.6.3",
     "react-i18next": "^15.4.1",
     "storybook": "^8.6.7",
     "storybook-dark-mode": "^4.0.2",
