Add repository and homepage fields to package.json; refactor form components to utilize useFieldRules hook for improved validation handling

--- a/package.json
+++ b/package.json
@@ -81,5 +81,10 @@
     },
     "engines": {
         "node": ">=18.0.0"
-    }
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/BaseStacks/schema-form"
+    },
+    "homepage": "https://github.com/BaseStacks/schema-form"
 }
