--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "name": "@basestacks/schema-form",
     "version": "0.1.1-dev.8",
     "description": "A small React library for building dynamic forms using JSON schemas",
+    "homepage": "https://github.com/BaseStacks/schema-form",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/BaseStacks/schema-form"
+    },
     "license": "MIT",
     "sideEffects": false,
     "exports": {
@@ -45,12 +50,10 @@
         "type": "tsc --noEmit"
     },
     "dependencies": {
-        "react": "^18.3.1",
         "react-hook-form": "^7.54.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.20.0",
-        "@types/node": "^22.13.10",
         "@microsoft/api-extractor": "^7.51.0",
         "@rollup/plugin-commonjs": "^26.0.3",
         "@rollup/plugin-node-resolve": "^15.3.1",
@@ -58,6 +61,7 @@
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
         "@types/jest": "^29.5.14",
+        "@types/node": "^22.13.10",
         "@types/object-path": "^0.11.4",
         "@types/react": "^19.0.10",
         "@typescript-eslint/parser": "^8.24.1",
@@ -67,6 +71,7 @@
         "eslint-plugin-react-refresh": "^0.4.19",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "react": "^18.3.1",
         "rimraf": "^3.0.2",
         "rollup": "^4.34.8",
         "rollup-plugin-typescript2": "^0.36.0",
@@ -81,10 +86,5 @@
     },
     "engines": {
         "node": ">=18.0.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/BaseStacks/schema-form"
-    },
-    "homepage": "https://github.com/BaseStacks/schema-form"
+    }
 }
