--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
         "@eslint/js": "^9.20.0",
         "@microsoft/api-extractor": "^7.51.0",
         "@rollup/plugin-commonjs": "^26.0.3",
-        "@rollup/plugin-node-resolve": "^15.3.1",
         "@rollup/plugin-terser": "^0.4.4",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
@@ -73,14 +72,14 @@
         "eslint-plugin-react-refresh": "^0.4.19",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
-        "react": "^18.3.1",
         "rimraf": "^3.0.2",
         "rollup": "^4.34.8",
         "rollup-plugin-typescript2": "^0.36.0",
         "ts-jest": "^29.2.6",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.2",
-        "typescript-eslint": "^8.24.1"
+        "typescript-eslint": "^8.24.1",
+        "react": "^19.0.0"
     },
     "peerDependencies": {
         "react": "^17 || ^18 || ^19",
