--- a/package.json
+++ b/package.json
@@ -70,16 +70,17 @@
         "eslint-plugin-only-warn": "^1.1.0",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^16.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "react": "^19.0.0",
         "rimraf": "^3.0.2",
         "rollup": "^4.34.8",
         "rollup-plugin-typescript2": "^0.36.0",
         "ts-jest": "^29.2.6",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.2",
-        "typescript-eslint": "^8.24.1",
-        "react": "^19.0.0"
+        "typescript-eslint": "^8.24.1"
     },
     "peerDependencies": {
         "react": "^17 || ^18 || ^19",
