Update TypeScript configuration and modify start script in package.json

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -3,7 +3,12 @@
         "./src/**/*"
     ],
     "compilerOptions": {
-        "strict": true,
+        "paths": {
+            "@basestacks/schema-form": [
+                "../src"
+            ]
+        },
+        "strict": false,
         "esModuleInterop": true,
         "lib": [
             "dom",
