--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
         "clean": "rimraf dist",
         "lint": "eslint **/*.{js,ts,tsx}",
         "lint:fix": "pnpm lint --fix",
-        "start": "cd ./story && pnpm install && pnpm start",
+        "start": "cd ./examples && pnpm start",
         "test": "jest --config ./scripts/jest/jest.config.ts",
-        "test:coverage": "jest --config ./scripts/jest/jest.config.ts --coverage",
+        "test:coverage": "pnpm test --coverage",
         "test:e2e": "cd ./story && pnpm test",
         "test:watch": "pnpm test--onlyChanged --watch",
         "type": "tsc --noEmit"
