Enforce strict mode to better type safety

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -8,7 +8,7 @@
                 "../src"
             ]
         },
-        "strict": false,
+        "strict": true,
         "esModuleInterop": true,
         "lib": [
             "dom",
