--- a/examples/package.json
+++ b/examples/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "start": "react-scripts start",
+    "start": "cross-env BROWSER=none react-scripts start",
     "test": "react-scripts test --env=jsdom"
   },
   "browserslist": [
