--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
         "start": "pnpm build:esm && cd ./examples && pnpm install && pnpm start",
         "test": "jest --config ./scripts/jest/jest.config.ts",
         "test:coverage": "pnpm test --coverage",
-        "test:e2e": "exit 0",
         "test:watch": "pnpm test--onlyChanged --watch",
+        "e2e": "cypress run",
         "type": "tsc --noEmit"
     },
     "dependencies": {
@@ -66,7 +66,10 @@
         "@types/object-path": "^0.11.4",
         "@types/react": "^19.0.10",
         "@typescript-eslint/parser": "^8.24.1",
+        "cross-env": "^7.0.3",
+        "cypress": "^13.17.0",
         "eslint": "^9.20.1",
+        "eslint-plugin-cypress": "^3.6.0",
         "eslint-plugin-only-warn": "^1.1.0",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
