--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": "explicit"
+        "source.fixAll.eslint": "always"
     },
     "typescript.tsdk": "node_modules/typescript/lib",
     "jest.jestCommandLine": "pnpm test",
-    "jest.runMode": "deferred"
+    "jest.runMode": "deferred",
 }
