Update jest config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
     },
     "typescript.tsdk": "node_modules/typescript/lib",
     "jest.jestCommandLine": "pnpm test",
-    "jest.runMode": "deferred",
+    "jest.runMode": {
+        "runAllTestsOnStartup": true,
+        "deferred": true,
+        "type": "on-save",
+        "testFileOnly": true
+    },
 }
