--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Test and upload coverage
 
 on:
   push:
@@ -30,3 +30,8 @@ jobs:
     - run: pnpm install
     - run: pnpm run build
     - run: pnpm test:coverage
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        slug: BaseStacks/schema-form
