--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -18,18 +18,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Install pnpm
-      uses: pnpm/action-setup@v4
-      with:
-        version: 10
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
-    - run: pnpm install
+
+    - name: Install Dependencies
+      uses: ./.github/actions/install-dependencies
+
     - run: pnpm run build
     - run: pnpm test:coverage
+
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
       with:
