--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -16,5 +16,5 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           start: pnpm start
-          wait-on: 'http://ip6-localhost:3000'
+          wait-on: 'http://localhost:3000'
           wait-on-timeout: 120
