Fix code quality issues

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "build:watch": "pnpm build:modern -w",
         "clean": "rimraf dist",
         "e2e": "cypress run",
-        "lint": "eslint **/*.{ts,tsx}",
+        "lint": "eslint **/*.{ts,tsx} --no-warn-ignored",
         "lint:fix": "pnpm lint --fix",
         "start": "pnpm build:esm && cd ./examples && pnpm install && pnpm start",
         "test": "jest --config ./scripts/jest/jest.config.ts",
