Update sonar exclusions to include nested test files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,4 +6,4 @@ sonar.projectKey=BaseStacks_schema-form
 sonar.sources=.
 
 # exclude test files from analysis
-sonar.exclusions=**/*.test.ts,**/*.test.tsx,**/*.cy.ts
+sonar.exclusions=**/*/*.test.ts,**/*/*.test.tsx,**/*/*.cy.ts
