--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -3,7 +3,7 @@ sonar.projectKey=BaseStacks_schema-form
 
 # relative paths to source directories. More details and properties are described
 # at https://docs.sonarsource.com/sonarqube-cloud/advanced-setup/analysis-scope/
-sonar.sources=.
+sonar.sources=./src
 
 # exclude test files from analysis
-sonar.exclusions=**/*/*.test.ts,**/*/*.test.tsx,**/*/*.cy.ts
+sonar.exclusions=**/*/*.test.ts,**/*/*.test.tsx
