--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
         "prerelease": "sh ./scripts/pre-release.sh"
     },
     "dependencies": {
-        "react-hook-form": "^7.62.0"
+        "react-hook-form": "^7.66.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.32.0",
@@ -74,7 +74,7 @@
         "@types/jest": "^29.5.14",
         "@types/node": "^22.17.0",
         "@types/object-path": "^0.11.4",
-        "@types/react": "^19.1.9",
+        "@types/react": "^19.2.2",
         "@typescript-eslint/parser": "^8.39.0",
         "cross-env": "^7.0.3",
         "cypress": "^14.5.3",
@@ -86,7 +86,8 @@
         "globals": "^16.3.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
-        "react": "^19.1.1",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
         "rimraf": "^3.0.2",
         "rollup": "^4.46.2",
         "rollup-plugin-typescript2": "^0.36.0",
